<resources>
    <string name="app_name">Подарок</string>
    <string name="check_text">Проверить</string>
    <string name="code_text">Код</string>
    <string name="hint_text">Это подсказка для тебя</string>
    <string name="get_hint_text">Получить подсказку</string>
    <string name="open_all_present">Все подарки</string>

    <string name="first_hint">Первая подсказка</string>
    <string name="first_additional_hint">Первая дополнительная подсказка</string>

    <string name="second_hint">Вторая подсказка</string>
    <string name="second_additional_hint">Вторая дополнительная подсказка</string>

    <string name="third_hint">Третья подсказка</string>
    <string name="third_additional_hint">Третья дополнительная подсказка</string>
    <string name="first_present_text">Твой первый подарок</string>
    <string name="second_present_text">Твой второй подарок</string>
    <string name="third_present_text">Твой третий подарок</string>
    <string name="back">Вернуться</string>

    <string name="rules_text">Правила исполнителя:
В день начала прохождения приложения-квеста исполнитель должен прислать свою геолокацию постановщику в приложении "Телеграм". Исполнитель должен пройти по каждому отмеченному месту на карте приложения. На каждой точке, кроме последней, исполнителю необходимо ввести в приложение найденный код для получения подарка. Исполнителю ЗАПРЕЩАЕТСЯ просить больше одной подсказки у постановщика.</string>

    <string name="first_congratulation">Вы открыли свой первый подарок, поздравляю тебя!\nНадеюсь на озоне ты себе прикупишь что-нибудь интересное^^</string>
    <string name="second_congratulation">Сейчас осень, а это пора болезней(\nПоэтому вот тебе сертификат на аптеку, купи таблЭточки, если болеешь или возьми витоминки, чтобы не болеть :)</string>
    <string name="third_congratulation">Это конечно мог бы сделать я, но, думаю, пусть тебя мнет профессионал xD</string>

    <string name="open_text">Открыть!</string>

    <string name="go">Начни охоту за подарками!</string>
    <string name="dialog_temp_message">Тут какой-то текст</string>
    <string name="dialog_temp_positive_button">Да</string>
    <string name="dialog_temp_negative_button">Нет</string>
    <string name="rules_description">Кнопка просмотра правил</string>
    <string name="map_description">Кнопка просмотра карты</string>
    <string name="counter_tool_str">1ч:20мин:40сек</string>

    <string name="tutorial_first">Создавай квест!</string>
    <string name="tutorial_second">Собирай подарки!</string>
    <string name="tutorial_third">Удиви своих друзей!</string>
    <string name="tutorial_go">Начать</string>

    <string name="mode_make">Создать квест</string>
    <string name="mode_sign_in">Войти в игру</string>

    <string name="form_send">Отправить</string>
    <string name="form_next">Далее</string>
    <string name="form_lat">Долгота</string>
    <string name="form_lng">Широта</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="form_congratulation">Поздравительный текст</string>
    <string name="form_link">Ссылка на активацию подарка</string>
    <string name="form_key">Код активации</string>
    <string name="form_key_open">Код открытия</string>
    <string name="form_qr">Сгенерировать QR код</string>
    <string name="point_form_text">Текст для места</string>
    <string name="point_form_hint">Подсказка для игрока</string>
    <string name="present_form_complete">Готово</string>
    <string name="email_hint">Ваш @email</string>
    <string name="password_hint">Ваш пароль</string>
    <string name="check_password_hint">Цифры из письма</string>
    <string name="google_auth">Войти с Google</string>
    <string name="vk_auth">Войти с VK</string>
    <string name="our_autch">Авторизоваться</string>
    <string name="login_game_password_hint">Пароль</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="navigation_home_text">Главная</string>
    <string name="navigation_chat_text">Чат</string>
    <string name="navigation_map_text">Карта</string>
    <string name="navigation_settings_text">Настройки</string>
    <string name="chat_field_hint">Печатать тут...</string>
    <string name="chat_item_dialog_replay_text">Ответить</string>
    <string name="chat_item_dialog_edit_text">Изменить</string>
    <string name="chat_item_dialog_delete_text">Удалить</string>
</resources>