<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".activities.startPack.formPack.formStages.PointFormFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/black"
            android:digits="0123456789."
            android:hint="@string/form_lat"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lng"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/black"
            android:digits="0123456789."
            android:hint="@string/form_lng"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lat" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/black"
            android:hint="@string/point_form_text"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lng" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/black"
            android:hint="@string/point_form_hint"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text" />

        <com.yandex.mapkit.mapview.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hint" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/form_next"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginTop="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>