<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:layout_gravity="center">

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/backgroung"
        app:riv_corner_radius="15dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="@drawable/border_dialog">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/dialog_temp_message"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/positive_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/button_dialog_style"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/dialog_temp_positive_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/negative_button"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/button_dialog_style"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/dialog_temp_negative_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>